--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,10 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+.idea/workspace.xml
+.idea/modules.xml
+.idea/compiler.xml
+SER.iml
+.idea/copyright/profiles_settings.xml
+Compiler_Cat/Compiler_Cat.iml
+Repo_Dog/Repo_Dog.iml
